--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 
 @font-face{
     font-family: Red-Hat-Bold;
-    src: url(../Red_Hat_Display/RedHatDisplay-Bold.ttf);
+    src: url(Red_Hat_Display/RedHatDisplay-Bold.ttf);
 }
 @font-face{
     font-family: Red-Hat;
-    src: url(../Red_Hat_Display/RedHatDisplay-Regular.ttf);
+    src: url(Red_Hat_Display/RedHatDisplay-Regular.ttf);
 }
 
 .back-ground{
